feat: winter theme

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -1,7 +1,7 @@
 body {
   min-height: 100vh;
   overflow: hidden;
-  background-image: url('https://sun9-30.userapi.com/impg/NVnWqKYXENu9zIgnkCG4sa58XDkReCfGvn8tqA/zIn0vVXphT8.jpg?size=1800x1200&quality=96&sign=d906c99c65633807aa1430adde7e9058&type=album');
+  background-image: url('https://i.pinimg.com/originals/f4/df/e9/f4dfe94b85bc3e788d3c25ab4481c334.jpg');
   backdrop-filter: blur(3px);
   background-size: cover;
   background-repeat: no-repeat;
