--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -33,16 +33,43 @@ body{
   position: relative;
   
   #timer {
-    background: linear-gradient(to bottom right, rgba(2, 99, 225, 1.0), rgb(24, 28, 235));
-    border-radius: 22px;
+    // background: linear-gradient(to bottom right, rgba(2, 99, 225, 1.0), rgb(24, 28, 235));
+    // border-radius: 22px;
+
+    .buttons {
+      display: flex;
+      margin-bottom: 20px;
+      justify-content: space-between;
+      padding: 10px;
+      position: relative;
+      z-index: 999;
+
+      .btn {
+        cursor: pointer;
+        padding: 15px;
+        border-radius: 10px;
+        background: rgba(20, 1, 44, 0.3);
+        backdrop-filter: blur(30px);
+        font-size: 2rem;
+        border: 2px solid transparent;
+        transition: all 0.5s;
+
+        &.active {
+          border: 2px solid rgb(255, 251, 0);
+          filter: drop-shadow(0 1px 4px rgb(246, 255, 0));
+        }
+      }
+    }
     
     #timer-text {
       align-items: center;
-      background-color: rgba(30,30,30,0.5);
+      // background-color: rgba(30,30,30,0.5);
       border-radius: 20px;      
       display: flex;
       margin: 4px;
       padding: 0px 20px;
+      background: linear-gradient(to bottom right, rgba(2, 99, 225, 1.0), rgb(24, 28, 235));
+      border-radius: 22px;
       
       .timer-char {
         height: 150px;
@@ -128,6 +155,16 @@ body{
   #app {
     #timer {
       border-radius: 8px;
+
+      .buttons {
+        margin-bottom: 15px;
+        padding: 5px;
+  
+        .btn {
+          padding: 5px;
+          font-size: 1rem;
+        }
+      }
 
       #timer-text {
         border-radius: 6px;     
